--- a/Apps/ventas/templates/agregar.html
+++ b/Apps/ventas/templates/agregar.html
@@ -1,30 +1,65 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+{% block contenido %}
 
-{%block contenido%}
+<link rel="stylesheet" href="{% static 'css/b4.css' %}">
+<script src="{% static 'js/b4.js' %}"></script>
+<script src="{% static 'js/main3.js' %}"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
+    integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
+    crossorigin="anonymous"></script>
 
-<div class="col-3">
-    {% if product.icono %}
-    <img src="{{product.icono.url}}" alt="Imagen del producto" width="200" height="200">
-    {% endif %}
+
+<section class="full-width header-well">
+    <div class="full-width header-well-icon">
+        <i class="zmdi zmdi-shopping-cart"></i>
+    </div>
+</section>
+
+
+<div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect text-center">
+    <div class="mdl-tabs__panel is-active" id="tabNewClient">
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col">
+                <div class="full-width panel mdl-shadow--2dp">
+                    <div class="full-width panel-tittle bg-primary text-center tittles">
+                        PRODUCTO AGREGADO AL CARRITO
+                    </div>
+                    <br>
+
+                    <div class="col-md-6">
+                        <div class="col-md-4">
+                    <div id="cuadroCentrado"class="mdl-card mdl-shadow--5dp full-width product-card card bg-secondary text-white text-center"
+                        style="width: 300px">
+                        <br>
+                        <div class="mdl-card__title">
+                            {% if product.icono %}
+                            <img src="{{product.icono.url}}" alt="Imagen del producto"
+                                style="height: 200px; width: 200px;">
+                            {% endif %}
+                        </div>
+
+                        <div>
+                            <a class="text-white" href="{% url 'administracion:productosapp' %}">
+                                {{product.nombre}}
+                            </a>
+                        </div>
+
+                        <div class="mdl-card__actions text-warning">
+                            Q {{product.precio}}
+
+                        </div>
+                        <div clas="mt-2">
+                            <a href="{% url 'ventas:cart' %}" class="btn btn-info">Ver carrito</a>
+                        </div>
+                        <br>
+                    </div>
+                </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="col">
-    <div class="h3 font-weight-bold text-success">
-        Producto agregado al carrito de ventas
-
-    </div>
-    
-    <div class="">
-        <a href="{% url 'administracion:productosapp' %}">
-            {{product.nombre}}
-        </a>
-    </div>
-    <div class="font-weight-bold text-danger">
-        Q {{product.precio}}
-
-    </div>
-    <div clas="mt-2">
-        <a href="{% url 'ventas:cart' %}" class="btn btn-info">Ver carrito</a>
-    </div>
-</div>
-
 {%endblock%}
