Modificacion en cantidad de productos

--- a/Apps/administracion/templates/products.html
+++ b/Apps/administracion/templates/products.html
@@ -91,7 +91,7 @@
 	<div class="mdl-card__actions mdl-card--border card bg-dark text-warning">
 		<dt>Precio: Q {{i.precio}}</dt>
 		<div class="mdl-card__actions mdl-card--border card bg-dark">
-			{% include 'add.html' %}
+			{% include 'vermas.html' %} 
 		</div>
 	</div>
 	
