--- a/Apps/ventas/templates/add.html
+++ b/Apps/ventas/templates/add.html
@@ -1,7 +1,7 @@
 <form action = "{% url 'ventas:add' %}" method="post">
     {%csrf_token%}
 
-    <input type="hidden" name="product_id" value="{{i.id}}">
+    <input type="hidden" name="product_id" value="{{product.id}}">
     <div class="">
         <button type="button" class="btn btn-info d-inline" id="restar">-</button>
         <input type="number" value="1" class="form-control col-sm-8 d-inline" id="quantity" name="quantity" readonly>
