--- a/Apps/ventas/templates/agregar.html
+++ b/Apps/ventas/templates/agregar.html
@@ -51,7 +51,7 @@
 
                         </div>
                         <div clas="mt-2">
-                            <a href="{% url 'ventas:cart' %}" class="btn btn-info">Ver carrito</a>
+                            {% include 'add.html' %}
                         </div>
                         <br>
                     </div>
