--- a/Apps/ventas/templates/agregar.html
+++ b/Apps/ventas/templates/agregar.html
@@ -62,4 +62,6 @@
         </div>
     </div>
 </div>
+
+<a class="btn btn-primary" href="{% url 'administracion:productosapp'%}">Regresar</a>
 {%endblock%}
