--- a/Apps/ventas/templates/vermas.html
+++ b/Apps/ventas/templates/vermas.html
@@ -3,6 +3,6 @@
 
     <input type="hidden" name="product_id" value="{{i.id}}">
     <div class="mt-2">
-        <button type="submit" class="btn btn-warning">Ver más</button>
+        <button type="submit" class="btn btn-warning">Comprar</button>
     </div>
 </form>
